--- a/src/component/Introduction/Introduction.css
+++ b/src/component/Introduction/Introduction.css
@@ -25,7 +25,7 @@
         /* Introduction App Display Position  */
         position: absolute;
         top: 25%;
-        left: 55%;
+        left: 20%;
     }
 }
 
@@ -50,6 +50,7 @@
 
 .container_paragraph {
     p {
+        line-height: 1.5;
         margin-bottom: 1em;
     }
 }
